# Thesis-Hub-BE

./: .gitignore  README_vi.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
app/: main.py  models.py
app/api/: router.py
app/config/: database.py  settings.py
app/core/: __init__.py  database.py  logging_config.py  openapi.py  security.py  settings.py
app/features/: __init__.py
app/features/auth/: dependencies.py
app/features/auth/api/: router.py
app/features/auth/domain/: models.py  schemas.py
app/features/auth/service/: auth_service.py
app/features/example_feature/: __init__.py  crud.py  models.py  router.py  schemas.py  services.py
app/features/users/domain/: models.py
app/shared/: database.py
app/tools/: init_db.py
migrations/: env.py
migrations/versions/: 094975edccc6_init_schema.py
